add view supermarket design

--- a/src/app/view-supermarket/view-supermarket.component.html
+++ b/src/app/view-supermarket/view-supermarket.component.html
@@ -1,1 +1,10 @@
-<p>view-supermarket works!</p>
+<div class="row">
+    <div class="col-12 col-md-6 col-lg-4">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">{{ supermarket.name }}</h5>
+          <p class="card-text">{{ supermarket.location }}</p>            
+        </div>
+      </div>
+    </div>
+  </div>
