change button style and text

--- a/src/app/view-supermarket/view-supermarket.component.html
+++ b/src/app/view-supermarket/view-supermarket.component.html
@@ -3,7 +3,8 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">{{ supermarket.name }}</h5>
-          <p class="card-text">{{ supermarket.location }}</p>            
+          <p class="card-text">{{ supermarket.location }}</p>   
+          <button class="btn btn-danger" (click)="deleteSupermarket(supermarket.id)">Delete Supermarket</button>         
         </div>
       </div>
     </div>
