add supermarket component

--- a/src/app/add-supermarket/add-supermarket.component.html
+++ b/src/app/add-supermarket/add-supermarket.component.html
@@ -1,1 +1,24 @@
-<p>add-supermarket works!</p>
+<div class="container">
+    <form novalidate
+          [formGroup]="supermarketForm"
+          (ngSubmit)="onSubmit()">
+    
+        <div class="form-group">
+        <label>Name</label>
+        <input type="text"
+                class="form-control"
+                formControlName="name">
+        </div>
+
+      <div class="form-group">
+        <label>Location</label>
+        <input type="text"
+               class="form-control"
+               formControlName="location">
+      </div>
+    
+      <pre>{{supermarketForm.value | json}}</pre>
+    
+      <button type="submit" class="btn btn-primary" >Submit</button>
+    </form>
+    </div>
