--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
             <h5 class="card-title">{{ supermarket.name }}</h5>
             <p class="card-text">{{ supermarket.location }}</p>            
             <a  [routerLink]="['/view-supermarket', supermarket.id]" class="btn btn-primary">View</a>
-
+            <a  [routerLink]="['/supermarket-update', supermarket.id]" class="btn btn-success">Edit</a>
           </div>
         </div>
       </div>
