--- a/src/app/view-supermarket/view-supermarket.component.html
+++ b/src/app/view-supermarket/view-supermarket.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="supermarket">
     <div class="col-12 col-md-6 col-lg-4">
       <div class="card">
         <div class="card-body">
@@ -7,5 +7,7 @@
           <button class="btn btn-danger" (click)="deleteSupermarket(supermarket.id)">Delete Supermarket</button>         
         </div>
       </div>
+
+
     </div>
   </div>
