--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,6 +10,10 @@
             <a class="nav-link active" aria-current="page" routerLink="/home">Home</a>
           </li>
 
+          <li class="nav-item">
+            <a class="nav-link" routerLink="/add-supermarket">Add Supermarket</a>
+          </li>
+
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" routerLink="/supplier/supplier-list" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Suppliers
