--- a/src/app/add-supermarket/add-supermarket.component.html
+++ b/src/app/add-supermarket/add-supermarket.component.html
@@ -1,21 +1,15 @@
-<div class="container">
-    <form novalidate
-          [formGroup]="supermarketForm"
-          (ngSubmit)="onSubmit()">
+<form novalidate [formGroup]="supermarketForm" (ngSubmit)="onSubmit()" class="row g-3">
     
-        <div class="form-group">
-        <label>Name</label>
-        <input type="text"
-                class="form-control"
-                formControlName="name">
-        </div>
+    <div class="form-group">
+      <label>Name</label>
+      <input type="text" class="form-control form-control-lg" formControlName="name">
+    </div>
 
       <div class="form-group">
         <label>Location</label>
         <input type="text"
-               class="form-control"
+               class="form-control form-control-lg"
                formControlName="location">
       </div>    
-      <button type="submit" class="btn btn-primary" >Submit</button>
+      <button type="submit" class="btn btn-primary btn-lg" >Submit</button>
     </form>
-    </div>
