--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,20 +15,22 @@
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" routerLink="/supplier/supplier-list" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Suppliers
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
               <li><a class="dropdown-item" routerLink="/supplier/supplier-edit">Add Supplier</a></li>
+              <li><a class="dropdown-item" routerLink="/supplier/supplier-list">Suppliers</a></li>
             </ul>
           </li>
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" routerLink="/manager/list" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
               Managers
             </a>
             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <li><a class="dropdown-item" routerLink="/manager/edit">Action</a></li>
+              <li><a class="dropdown-item" routerLink="/manager/edit">Add Manager</a></li>
+              <li><a class="dropdown-item" routerLink="/manager/list">Managers</a></li>
             </ul>
           </li>
 
