--- a/src/app/supermarket-update/supermarket-update.component.html
+++ b/src/app/supermarket-update/supermarket-update.component.html
@@ -1,17 +1,17 @@
-<div class="container custom-container">
-    <div class="col-md-12" *ngIf="supermarket">
+<form  class="row g-3">
+    <div  *ngIf="supermarket">
       
       <h3 class="mb-3 text-center">Update Supermarket</h3>
-      <div class="form-group">
-        <input type="text" [(ngModel)]="supermarket.name" class="form-control" placeholder="Name">
+      <div class="mb-3 row">
+        <input type="text" [(ngModel)]="supermarket.name" name="name" class="form-control" placeholder="Name">
       </div>
-      <div class="form-group">
-        <input type="text" [(ngModel)]="supermarket.location" class="form-control" placeholder="Location">
+      <div class="mb-3 row">
+        <input type="text" [(ngModel)]="supermarket.location" name="location" class="form-control" placeholder="Location">
       </div>
 
-      <div class="form-group">
-        <button class="btn btn-success btn-lg btn-block" (click)="updateSupermarket()">Update Supermarket</button>
+      <div class="mb-3 row">
+        <button class="btn btn-primary btn-lg" (click)="updateSupermarket()">Update Supermarket</button>
       </div>
       
     </div>
-  </div>
+</form>
